@@ -52,9 +52,11 @@ OBJS=	main.o\
 
 include ../Rules.mak
 
+DEPS=$(OBJS:.o=.d)
+
 LDFLAGS= -nostdlib -Wl,-T,$(TARG).lnk,-Map,$(TARG).map,--emit-relocs
 CFLAGS= -Werror -Wall -Wstrict-prototypes -fomit-frame-pointer -O2 -fno-strict-aliasing $(CFLAGS_CPU) $(CFLAGS_COLO)
-CPPFLAGS= -nostdinc -Iinclude -I../include -D_DEBUG $(CPPFLAGS_GCC)
+CPPFLAGS= -MD -nostdinc -Iinclude -I../include -D_DEBUG $(CPPFLAGS_GCC)
 
 LOADADDR= $(shell $(CROSS_COMPILE)readelf -l $(TARG) | awk '$$1 ~ /^LOAD$$/ { print $$3 }')
 
@@ -64,35 +66,37 @@ all:
 binary: $(TARG).elf
 
 $(TARG).bin: $(TARG)
-	$(OBJCOPY) -O binary $^ $@
+	$(OBJCOPY) -O binary $< $@
 
 $(TARG)-wrap.S: $(TARG).rfx
-	echo -e '\t.section .stage2\n\t.incbin "$^"' > $@
+	echo -e '\t.section .stage2\n\t.incbin "$<"' > $@
 
 $(TARG).elf: $(TARG)-wrap.S
-	$(CC) $(CFLAGS) -c -o $@ $^
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(TARG).rfx: $(TARG)
-	$(TOOLDIR)/elf2rfx/elf2rfx -f $^ $@
+	$(TOOLDIR)/elf2rfx/elf2rfx -f $< $@
 
 $(TARG).tmp: $(TARG)
-	$(TOOLDIR)/elf2rfx/elf2rfx -fb $(LOADADDR) $^ $@
+	$(TOOLDIR)/elf2rfx/elf2rfx -fb $(LOADADDR) $< $@
 
 test-rfx: $(TARG).bin $(TARG).tmp
 	cmp $^
 	@echo '***  SUCCESS  ***'
 
 clean:
-	rm -f $(TARG){,.elf,.rfx,.map,.bin,.tmp,-wrap.S} $(OBJS)
+	rm -f $(TARG){,.elf,.rfx,.map,.bin,.tmp,-wrap.S} $(OBJS) $(DEPS)
 
 $(TARG): $(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $^
 
 %.o: src/%.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) -c -o $@ $^
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c -o $@ $<
 
 %.o: src/%.S
-	$(CC) $(CFLAGS) $(CPPFLAGS) -c -o $@ $^
+	$(CC) $(CFLAGS) $(CPPFLAGS) -c -o $@ $<
+
+-include $(DEPS)
 
 .PHONY: all binary clean test-rfx
 
