@@ -3,6 +3,11 @@
 Original firmware MD5 checksums
 ===============================
 
+Qube2700
+--------
+
+05 Jun 1998			93e4ee567d406a537a3790de16cb6c4e
+
 Qube2
 -----
 
