@@ -3,6 +3,11 @@
 CoLo 1.20 (xxxx-xx-xx)
 ----------------------
 
+*	Wait for network interface transmit ring to drain when disabling network
+	interface. This should improve net console output.
+
+*	Added header file dependency checking to stage1, stage2 and chain.
+
 CoLo 1.19 (2005-04-03)
 ----------------------
 
